concord_macros/tests/v5/dsl/fail/fail_old_route_host.stderr
error: `route.host` was removed in v5 rate-limit keys; use `host`
 --> tests/v5/dsl/fail/fail_old_route_host.rs:8:36
  |
8 |             bucket application by [route.host] { 1 / 1s }
  |                                    ^^^^^

warning: unused import: `concord_core::prelude::*`
 --> tests/v5/dsl/fail/fail_old_route_host.rs:1:5
  |
1 | use concord_core::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
